--- a/src/app/pages/delivery-management/mitra-delivery-panel/index/mitra-delivery-panel.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/index/mitra-delivery-panel.component.html
@@ -3,7 +3,7 @@
   <page-content-header [contentTitle]="'Panel Mitra'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/delivery','courier','create']">
+        [routerLink]="['/delivery','panel-mitra','create']">
         <mat-icon>add</mat-icon>TAMBAH
       </button>
     </div>
