--- a/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
@@ -52,7 +52,7 @@
           [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
           [count]="pagination.total" [selected]="selected" [limit]="pagination.per_page" [externalPaging]="true"
           [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [selectionType]="'checkbox'"
-          (select)='onSelect($event)' [selectCheck]='selectCheck'>
+          (select)='onSelect($event)'>
 
           <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
             <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
