--- a/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
+++ b/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div fxLayout="row" fxLayoutAlign="end start" fxFlex="1 0 auto" class="border-bottom">
+          <div fxLayout="row" fxLayoutAlign="end start" fxFlex="1 0 auto" class="border-bottom" *ngIf="i !== 0">
             <button mat-icon-button fxFlex="5" matTooltip="Hapus" (click)="deleteService(i)" matTooltipPosition="below"
               class="secondary-text">
               <mat-icon class="secondary-text">delete</mat-icon>
