--- a/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
@@ -28,7 +28,8 @@
               </mat-error>
             </mat-form-field>
             <div fxLayout="row" fxFlex="20" style="height: 35px;">
-              <button *ngIf="!isDetail" mat-raised-button type="button" class="confirmation-button" fxFlex="100">
+              <button *ngIf="!isDetail" mat-raised-button type="button" class="confirmation-button" fxFlex="100"
+                (click)="getPanelMitraList()">
                 ATUR PANEL MITRA
               </button>
             </div>
@@ -48,6 +49,64 @@
             <mat-icon>arrow_upward</mat-icon> Export XLSX
           </button>
         </div>
+        <form [formGroup]="formFilter" autoComplete="off">
+          <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px"
+            fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="National" formControlName="national">
+                <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Zone" formControlName="zone" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                  Zona' :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Regional" formControlName="region" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                  Regional'
+                  :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Area" formControlName="area" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                  Area'
+                  :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
+                  'Semua
+                  Salespoint'
+                  :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="District" formControlName="district" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                  District'
+                  :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Territory" formControlName="territory" multiple>
+                <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
+                  Territori'
+                  :
+                  item.code}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </form>
         <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
           [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
           [count]="pagination.total" [selected]="selected" [limit]="pagination.per_page" [externalPaging]="true"
