--- a/src/app/pages/delivery-management/courier-management/index/courier-management.component.html
+++ b/src/app/pages/delivery-management/courier-management/index/courier-management.component.html
@@ -42,11 +42,20 @@
         <ngx-datatable-column [width]="100" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
-              <p class="status text-truncate h6 p-4"
-                style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+              <p [matMenuTriggerFor]="appMenu" class="status text-truncate h6 p-4" matTooltip="Ubah Status Kurir"
+                style="cursor: pointer;min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
                 [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
                 {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
               </p>
+              <mat-menu #appMenu="matMenu">
+                <button mat-menu-item (click)="updateStatus(row, 'active')">Aktif</button>
+                <button mat-menu-item (click)="updateStatus(row, 'inactive')">Tidak Aktif</button>
+              </mat-menu>
+              <!-- <p class="status text-truncate h6 p-4"
+                style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+                [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
+                {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+              </p> -->
             </div>
           </ng-template>
         </ngx-datatable-column>
