--- a/src/app/pages/dte/trade/create/trade-create.component.html
+++ b/src/app/pages/dte/trade/create/trade-create.component.html
@@ -9,7 +9,8 @@
         <div fxLayout="row" fxLayoutAlign="space-between center">
           <h2 class="">Buat Trade Program</h2>
           <div>
-            <mat-form-field [class]="formTradeProgram.get('status').value === 'publish' ? 'radius-select green' : 'radius-select red'">
+            <mat-form-field
+              [class]="formTradeProgram.get('status').value === 'publish' ? 'radius-select green' : 'radius-select red'">
               <mat-select formControlName="status">
                 <mat-option *ngFor="let item of statusTP" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
@@ -18,8 +19,8 @@
         </div>
         <br>
         <div class="ayo-middle" fxLayout="column">
-          <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept="image/*"
-            [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag">
+          <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
+            accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag">
             <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
               <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
               <br>
@@ -40,8 +41,19 @@
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
+              <mat-select formControlName="group_trade_program" placeholder="Group Trade Program">
+                <mat-option *ngFor="let item of listGroupTradeProgram" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+              <!-- <mat-error *ngIf="formTradeProgram.controls['name'].hasError('required') && formTradeProgram.controls['name'].touched">
+                Nama Trade Program harus diisi
+              </mat-error> -->
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="47%" class="is-light form-primary">
               <input matInput type="text" formControlName="name" placeholder="Nama Trade Program">
-              <mat-error *ngIf="formTradeProgram.controls['name'].hasError('required') && formTradeProgram.controls['name'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['name'].hasError('required') && formTradeProgram.controls['name'].touched">
                 Nama Trade Program harus diisi
               </mat-error>
             </mat-form-field>
@@ -55,19 +67,21 @@
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
               <mat-datepicker #startDate></mat-datepicker>
-              <mat-error *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
                 Tanggal Mulai harus diisi
               </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex="50%" class="is-light form-primary">
-              <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate" placeholder="Tanggal Berakhir"
-                [min]="minDate" (dateChange)="setMinExpireDate()">
+              <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
+                placeholder="Tanggal Berakhir" [min]="minDate" (dateChange)="setMinExpireDate()">
               <mat-datepicker-toggle matSuffix [for]="endDate">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
               <mat-datepicker #endDate></mat-datepicker>
-              <mat-error *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
                 Tanggal Berakhir harus diisi
               </mat-error>
             </mat-form-field>
@@ -76,23 +90,26 @@
             <mat-form-field fxFlex="47%" class="is-light form-primary">
               <input matInput type="tel" currencyMask min="0" formControlName="budget" placeholder="Dana Trade Program"
                 numericOnly>
-              <mat-error *ngIf="formTradeProgram.controls['budget'].hasError('required') && formTradeProgram.controls['budget'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['budget'].hasError('required') && formTradeProgram.controls['budget'].touched">
                 Dana Trade Program harus diisi
               </mat-error>
-              <mat-error *ngIf="formTradeProgram.controls['budget'].hasError('min') && formTradeProgram.controls['budget'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['budget'].hasError('min') && formTradeProgram.controls['budget'].touched">
                 Dana Trade Program tidak boleh kurang dari 0
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
-              <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" (focus)="dp.open()" placeholder="Tanggal Kadaluarsa Coin Trade Program"
-                [min]="minExpireDate">
+              <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" (focus)="dp.open()"
+                placeholder="Tanggal Kadaluarsa Coin Trade Program" [min]="minExpireDate">
               <mat-datepicker-toggle matSuffix [for]="dp">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
               <mat-datepicker #dp></mat-datepicker>
-              <mat-error *ngIf="formTradeProgram.controls['coin_expiry_date'].hasError('required') && formTradeProgram.controls['coin_expiry_date'].touched">
+              <mat-error
+                *ngIf="formTradeProgram.controls['coin_expiry_date'].hasError('required') && formTradeProgram.controls['coin_expiry_date'].touched">
                 Tanggal Kadaluarsa Coin Trade Program harus diisi
               </mat-error>
             </mat-form-field>
